--- a/udp/web/Dockerfile
+++ b/udp/web/Dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1
 
 COPY bin/Release/net5.0/publish/ App/
 WORKDIR /App
